# see4you

./: README.md  pyproject.toml
notebooks/: eda.ipynb  setup.ipynb  test_dataset.ipynb  training.ipynb
src/: dataset.py  image_captioning_model.py  model.py  pretrained_mobilenet_v3.py  scratch_gru.py  tester.py  trainer.py
