[project]
name = "grouptaskligia"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayrsz",email = "matheusayressantos@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false